[tool.poetry]
name = "colored-pi-generator"
version = "0.1.0"
description = ""
authors = ["haojiun.lo <haojiunlo@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.5.1"
numpy = "2.1.2"
matplotlib = "3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
